--- a/index.html
+++ b/index.html
@@ -11,12 +11,23 @@
 <a href="apk/tachiyomi-en.asurascansus-v1.4.41.apk">Tachiyomi: Asura Scans.us (unoriginal)</a>
 <a href="apk/tachiyomi-all.batoto-v1.4.49.apk">Tachiyomi: Bato.to</a>
 <a href="apk/tachiyomi-all.comickfun-v1.4.54.apk">Tachiyomi: Comick</a>
+<a href="apk/tachiyomi-en.freemangatop-v1.4.44.apk">Tachiyomi: FreeMangaTop</a>
+<a href="apk/tachiyomi-en.harimanga-v1.4.45.apk">Tachiyomi: Harimanga</a>
+<a href="apk/tachiyomi-en.lhtranslation-v1.4.42.apk">Tachiyomi: LHTranslation</a>
 <a href="apk/tachiyomi-all.mangadex-v1.4.200.apk">Tachiyomi: MangaDex</a>
+<a href="apk/tachiyomi-en.mangafoxfull-v1.4.41.apk">Tachiyomi: MangaFoxFull</a>
+<a href="apk/tachiyomi-en.mangafoxfun-v1.4.30.apk">Tachiyomi: MangaFox.fun</a>
+<a href="apk/tachiyomi-en.mangafox-v1.4.7.apk">Tachiyomi: MangaFox</a>
 <a href="apk/tachiyomi-en.mangahere-v1.4.21.apk">Tachiyomi: Mangahere</a>
 <a href="apk/tachiyomi-en.mangahereonl-v1.4.30.apk">Tachiyomi: MangaHere.onl</a>
 <a href="apk/tachiyomi-en.mangakakalot-v1.4.11.apk">Tachiyomi: Mangakakalot</a>
+<a href="apk/tachiyomi-en.manganelo-v1.4.10.apk">Tachiyomi: Manganato</a>
+<a href="apk/tachiyomi-en.reaperscans-v1.4.58.apk">Tachiyomi: Reaper Scans</a>
+<a href="apk/tachiyomi-en.toonily-v1.4.53.apk">Tachiyomi: Toonily</a>
+<a href="apk/tachiyomi-en.toonilyme-v1.4.18.apk">Tachiyomi: Toonily.me</a>
 <a href="apk/tachiyomi-all.webtoons-v1.4.43.apk">Tachiyomi: Webtoons.com</a>
 <a href="apk/tachiyomi-all.webtoonstranslate-v1.4.7.apk">Tachiyomi: Webtoons.com Translations</a>
+<a href="apk/tachiyomi-en.zinmanga-v1.4.43.apk">Tachiyomi: Zinmanga</a>
 </pre>
 </body>
 </html>
